--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "15.3.3",
     "phaser": "^3.90.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "styled-components": "^6.1.18"
   },
   "devDependencies": {
     "@types/node": "^20",
